optimise further + enable logs